# slowstream

./: README.md  docker-compose.yaml  main.py  pyproject.toml
slowstream/: __init__.py
tests/: conftest.py  test_consumer_startup.py
