[tool.poetry]
name = "slowstream"
version = "0.1.0"
description = ""
authors = ["Yevhenii Hyzyla <hyzyla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
confluent-kafka = "^1.8.2"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

